[tool.poetry]
name = "milwrap"
version = "0.2.0"
description = "milwrap - multiple instane meta-learner that can use any supervised-learning algorithms."
authors = ["Akimitsu Inoue <akimitsu.inoue@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/inoueakimitsu/milwrap"
repository = "https://github.com/inoueakimitsu/milwrap"
keywords = ["machine learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10"
]
packages = [
    { include = "milwrap" }
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.22.0"
pandas = ">=1.3.0"
scikit-learn = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pytest = "*"
mypy = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
pre-commit = "^3.3.3"
pytest-cov = "^4.1.0"
commitizen = "^3.6.0"
pdoc3 = "^0.11.1"
ruff = "^0.4.5"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
